syntax = "proto3";
package pirate;

enum Error {
    BadParameter = 0;
}
